tests/integration/tests/di/ui/fail/injectable_key_on_function.rs
use reinhardt_di::injectable_key;

#[injectable_key]
fn not_a_key() {}

fn main() {}
